--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,48 @@
 #page title
-page_title                                :                                           # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : Timewave                                           
+# Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
-ios_app_id                                : 1234793120                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
+ios_app_id                                : 1524345488                                
+# Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
-appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
-playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
-                                                                                      # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
+appstore_link                             : https://apps.apple.com/app/id1524345488                                          
+# Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 
-app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Write a short tagline for your app.
+playstore_link                            :                                           
+# Enter Google Play Store URL.
 
-enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
+presskit_download_link                    : /assets/appicon.png #https://emilbaehr.com                                          
+# Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
+# Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip")
+
+
+
+app_icon                                  : /assets/appicon.png                      
+# Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+
+app_name                                  : Timewave                                           
+# Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+
+app_price                                 : $ 1.99                                          
+# Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+
+app_description                           : Flowing timers for sequential tasks.
+
+enable_smart_app_banner                   : true                                      
+# Set to true to show a smart app banner at top of page on mobile devices.
 
 
 
 # Information About Yourself
-your_name                                 : Emil Baehr                                
-your_link                                 : https://emilbaehr.com                     
-your_city                                 : Copenhagen                                
-email_address                             : emil.baehr@gmail.com
+your_name                                 : Sahil Arayakandy                                
+your_link                                 : https://mdsahilak.github.io                     
+your_city                                 : bangalore, India                                
+email_address                             : mdsahilak.dev@gmail.com
 facebook_username                         :                                           
-instagram_username                        : ebaehr
-twitter_username                          : ebaehr
-github_username                           : emilbaehr
+instagram_username                        : 
+twitter_username                          : mdsahilak
+github_username                           : mdsahilak
 youtube_username                          :
 
 
@@ -34,41 +50,25 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
+  - title                                 : Create Timers
+    description                           : Create your own timers to keep track of individual tasks.
     fontawesome_icon_name                 : magic
     
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
-    fontawesome_icon_name                 : mobile
-
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
-    fontawesome_icon_name                 : play-circle
-
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
-    fontawesome_icon_name                 : sync
-
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : adjust
-  
-  - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : star
-
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
-    fontawesome_icon_name                 : arrow-alt-circle-down
-
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
+  - title                                 : Chain Timers
+    description                           : Chain timers together with breaks to create a Timeflow.
     fontawesome_icon_name                 : link
 
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : info-circle
+  - title                                 : Personalise Flow
+    description                           : Add a title, subtitle and icon to make it your own
+    fontawesome_icon_name                 : star
+
+  - title                                 : Powerful Tools
+    description                           : Long press on a timer to duplicate or reorder
+    fontawesome_icon_name                 : sync
+  
+  - title                                 : Quick Play
+    description                           : Tap on the Timeflow's icon to directly enter play mode
+    fontawesome_icon_name                 : play-circle
 
   - title                                 : # New Feature Title
     description                           : # New Feature Description
@@ -77,13 +77,13 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#000000"
-topbar_transparency                       : 0.1
-topbar_title_color                        : "#ffffff"
+topbar_color                              : "#666666"
+topbar_transparency                       : 0.3
+topbar_title_color                        : "#000000"
 
-cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#363b3d"
-cover_overlay_transparency                : 0.8
+cover_image                               : assets/background.jpg                    # Replace with alternative image path or image URL.
+cover_overlay_color                       : "#EBEBEB"
+cover_overlay_transparency                : 0.7
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
 
@@ -91,20 +91,20 @@ body_background_color                     : "#ffffff"
 
 link_color                                : "#1d63ea"
 
-app_title_color                           : "#ffffff"
-app_price_color                           : "#ffffff"
-app_description_color                     : "#ffffff"
+app_title_color                           : "#000000"
+app_price_color                           : "#424242"
+app_description_color                     : "#333333"
 
 feature_title_color                       : "#000000"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "#1d63ea"
-feature_icons_background_color            : "#e6e6e6"
+feature_icons_foreground_color            : "#434343"
+feature_icons_background_color            : "#EFEFEF"
 
 social_icons_foreground_color             : "#666666"
 social_icons_background_color             : "#e6e6e6"
 
-footer_text_color                         : "#666666"
+footer_text_color                         : "#000000"
 
 
 
