--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ appstore_link                             : https://apps.apple.com/app/id1524345
 playstore_link                            :                                           
 # Enter Google Play Store URL.
 
-presskit_download_link                    : /assets/appicon.png #https://emilbaehr.com                                          
+presskit_download_link                    : /assets/PressKit.zip #https://emilbaehr.com                                          
 # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file).
 # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip")
 
@@ -36,7 +36,7 @@ enable_smart_app_banner                   : true
 
 # Information About Yourself
 your_name                                 : Sahil Arayakandy                                
-your_link                                 : https://mdsahilak.github.io                     
+your_link                                 :                     
 your_city                                 : bangalore, India                                
 email_address                             : mdsahilak.dev@gmail.com
 facebook_username                         :                                           
@@ -104,7 +104,7 @@ feature_icons_background_color            : "#EFEFEF"
 social_icons_foreground_color             : "#666666"
 social_icons_background_color             : "#e6e6e6"
 
-footer_text_color                         : "#000000"
+footer_text_color                         : "#666666"
 
 
 
