small tweaks in _config

--- a/_config.yml
+++ b/_config.yml
@@ -36,14 +36,14 @@ enable_smart_app_banner                   : true
 
 # Information About Yourself
 your_name                                 : Sahil Arayakandy                                
-your_link                                 :                     
-your_city                                 : bangalore, India                                
+your_link                                 : https://mdsahilak.github.io                    
+your_city                                 : bangalore, India 🇮🇳                                
 email_address                             : mdsahilak.dev@gmail.com
 facebook_username                         :                                           
 instagram_username                        : 
 twitter_username                          : mdsahilak
 github_username                           : mdsahilak
-youtube_username                          :
+youtube_username                          : 
 
 
 
